поправил страницу профиля пользователя

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -26,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@types/react-input-mask": "^3.0.6",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
