--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
-    "zustand": "^5.0.4"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
