добавлено модальное окно при успешной регистрации

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@react-input/mask": "^2.0.4",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
