--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-router/serve": "^7.5.0",
     "@reduxjs/toolkit": "^2.8.2",
     "async-mutex": "^0.5.0",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
