--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@react-input/mask": "^2.0.4",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
